Services load component data for TokenAuth,GrantTypes,ResponseTypes

--- a/libs/oidc/admin/src/lib/modules/grant-types/view-grant-types/view-grant-types.component.html
+++ b/libs/oidc/admin/src/lib/modules/grant-types/view-grant-types/view-grant-types.component.html
@@ -1,1 +1,12 @@
-<p>view-grant-types works!</p>
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Type</th>
+    <th>Details</th>
+  </tr>
+  <tr *ngFor="let grantType of ($grantTypes | async)">
+    <td>{{grantType.name}}</td>
+    <td>{{grantType.type}}</td>
+    <td>{{grantType.details}}</td>
+  </tr>
+</table>
