--- a/libs/oidc/admin/src/lib/modules/grant-types/edit-grant-types/edit-grant-types.component.html
+++ b/libs/oidc/admin/src/lib/modules/grant-types/edit-grant-types/edit-grant-types.component.html
@@ -1,1 +1,14 @@
-<p>edit-grant-types works!</p>
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Type</th>
+    <th>Details</th>
+    <th class="action-row">Actions</th>
+  </tr>
+  <tr *ngFor="let grantType of ($grantTypes | async)">
+    <td>{{grantType.name}}</td>
+    <td>{{grantType.type}}</td>
+    <td>{{grantType.details}}</td>
+    <td><span [routerLink]="[grantType.guid]" routerLinkActive="active" class="material-icons action alt" title="Edit role">edit</span><span (click)="deleteGrantType(grantType)" class="material-icons action alt" title="Delete role">delete</span></td>
+  </tr>
+</table>
