--- a/libs/oidc/admin/src/lib/modules/response-types/add-response-types/add-response-types.component.html
+++ b/libs/oidc/admin/src/lib/modules/response-types/add-response-types/add-response-types.component.html
@@ -1,1 +1,13 @@
-<p>add-response-types works!</p>
+<form [formGroup]="form">
+  <div class="form-section">
+    <div class="form-section-body">
+      <div class="form-collection row pad-top">
+        <tamu-gisc-textbox formControlName="type" placeholder="Type" type="text" floatLabel="true"></tamu-gisc-textbox>
+      </div>
+      <div class="form-collection row">
+        <tamu-gisc-textbox formControlName="details" placeholder="Details" type="text" floatLabel="true"></tamu-gisc-textbox>
+      </div>
+      <tamu-gisc-button (click)="submitResponseType()" [value]="'Add Response Type'" type="submit"></tamu-gisc-button>
+    </div>
+  </div>
+</form>
