--- a/libs/oidc/admin/src/lib/modules/grant-types/edit-grant-types/detail-grant-type/detail-grant-type.component.html
+++ b/libs/oidc/admin/src/lib/modules/grant-types/edit-grant-types/detail-grant-type/detail-grant-type.component.html
@@ -1,1 +1,15 @@
-<p>detail-grant-type works!</p>
+<form [formGroup]="form">
+  <div class="form-section">
+    <div class="form-section-body">
+      <div class="form-collection row pad-top">
+        <tamu-gisc-textbox formControlName="name" placeholder="Name" type="text" floatLabel="true"> </tamu-gisc-textbox>
+      </div>
+      <div class="form-collection row">
+        <tamu-gisc-textbox formControlName="type" placeholder="Type" type="text" floatLabel="true"></tamu-gisc-textbox>
+      </div>
+      <div class="form-collection row">
+        <tamu-gisc-textbox formControlName="details" placeholder="Details" type="text" floatLabel="true"></tamu-gisc-textbox>
+      </div>
+    </div>
+  </div>
+</form>
