Adding / editing client-metadata works

--- a/libs/oidc/admin/src/lib/modules/client-metadata/edit-client-metadata/detail-client-metadata/detail-client-metadata.component.html
+++ b/libs/oidc/admin/src/lib/modules/client-metadata/edit-client-metadata/detail-client-metadata/detail-client-metadata.component.html
@@ -49,7 +49,7 @@
     </div>
     <div class="form-section-body">
       <div class="form-collection row">
-        <tamu-gisc-select formControlName="token_endpoint_auth_method" [data]="$tokenAuthMethods | async" displayTemplate="type" valueTemplate="type"></tamu-gisc-select>
+        <tamu-gisc-select formControlName="token_endpoint_auth_method" [data]="$tokenAuthMethods | async" displayTemplate="type" valueTemplate="guid"></tamu-gisc-select>
       </div>
     </div>
   </div>
