--- a/libs/oidc/admin/src/lib/modules/client-metadata/edit-client-metadata/edit-client-metadata.component.html
+++ b/libs/oidc/admin/src/lib/modules/client-metadata/edit-client-metadata/edit-client-metadata.component.html
@@ -14,7 +14,7 @@
     <td>{{client.grantTypes}}</td>
     <td>{{client.responseTypes}}</td>
     <td>{{client.redirectUris}}</td>
-    <td>{{client.tokenEndpointAuthMethod}}</td>
+    <td>{{client.token_endpoint_auth_method}}</td>
     <td><span [routerLink]="[client.guid]" routerLinkActive="active" class="material-icons action alt" title="Edit client">edit</span><span (click)="deleteClientMetadata(client)" class="material-icons action alt" title="Delete client">delete</span></td>
   </tr>
 </table>
