--- a/libs/oidc/admin/src/lib/modules/client-metadata/view-client-metadata/view-client-metadata.component.html
+++ b/libs/oidc/admin/src/lib/modules/client-metadata/view-client-metadata/view-client-metadata.component.html
@@ -13,6 +13,6 @@
     <td>{{client.grantTypes}}</td>
     <td>{{client.responseTypes}}</td>
     <td>{{client.redirectUris}}</td>
-    <td>{{client.tokenEndpointAuthMethod}}</td>
+    <td>{{client.token_endpoint_auth_method}}</td>
   </tr>
 </table>
