--- a/libs/oidc/admin/src/lib/modules/users/edit-users/detail-user/detail-user.component.html
+++ b/libs/oidc/admin/src/lib/modules/users/edit-users/detail-user/detail-user.component.html
@@ -36,78 +36,78 @@
       </div>
     </div>
   </div>
-</form>
 
-<form [formGroup]="accountForm">
-  <div class="form-section">
-    <div class="form-section-toolbar">
-      <div class="form-section-name">
-        <p>Account</p>
+  <div formGroupName="account">
+    <div class="form-section">
+      <div class="form-section-toolbar">
+        <div class="form-section-name">
+          <p>Account</p>
+        </div>
+      </div>
+
+      <div class="form-section-body">
+        <div class="form-collection row pad-top">
+          <tamu-gisc-textbox formControlName="given_name" placeholder="First Name" type="text" floatLabel="true"> </tamu-gisc-textbox>
+
+          <tamu-gisc-textbox formControlName="family_name" placeholder="Last Name" type="text" floatLabel="true"></tamu-gisc-textbox>
+        </div>
+
+        <div class="form-collection row">
+          <tamu-gisc-textbox formControlName="nickname" placeholder="Nickname" type="text" floatLabel="true"></tamu-gisc-textbox>
+
+          <tamu-gisc-textbox formControlName="profile" placeholder="Profile URL" type="text" floatLabel="true"></tamu-gisc-textbox>
+        </div>
+
+        <div class="form-collection row">
+          <tamu-gisc-textbox formControlName="picture" placeholder="Picture" type="text" floatLabel="true"></tamu-gisc-textbox>
+
+          <tamu-gisc-textbox formControlName="website" placeholder="Website URL" type="text" floatLabel="true"></tamu-gisc-textbox>
+        </div>
+
+        <div class="form-collection row">
+          <tamu-gisc-textbox formControlName="gender" placeholder="Gender" type="text" floatLabel="true"></tamu-gisc-textbox>
+
+          <tamu-gisc-textbox formControlName="zoneinfo" placeholder="Zone Info" type="text" floatLabel="true"></tamu-gisc-textbox>
+        </div>
+
+        <div class="form-collection row">
+          <tamu-gisc-textbox formControlName="phone_number" placeholder="Phone Number" type="text" floatLabel="true"></tamu-gisc-textbox>
+
+          <tamu-gisc-textbox formControlName="phone_number_verified" placeholder="Phone Number Verified" type="text" floatLabel="true" disabled></tamu-gisc-textbox>
+        </div>
+
+        <div class="form-collection row">
+          <tamu-gisc-textbox formControlName="locale" placeholder="Locale" type="text" floatLabel="true"></tamu-gisc-textbox>
+        </div>
+        <div class="form-collection row">
+          <tamu-gisc-textbox formControlName="added" placeholder="Added" type="text" floatLabel="true" disabled></tamu-gisc-textbox>
+        </div>
       </div>
     </div>
 
-    <div class="form-section-body">
-      <div class="form-collection row pad-top">
-        <tamu-gisc-textbox formControlName="given_name" placeholder="First Name" type="text" floatLabel="true"> </tamu-gisc-textbox>
-
-        <tamu-gisc-textbox formControlName="family_name" placeholder="Last Name" type="text" floatLabel="true"></tamu-gisc-textbox>
+    <div class="form-section">
+      <div class="form-section-toolbar">
+        <div class="form-section-name">
+          <p>Address</p>
+        </div>
       </div>
 
-      <div class="form-collection row">
-        <tamu-gisc-textbox formControlName="nickname" placeholder="Nickname" type="text" floatLabel="true"></tamu-gisc-textbox>
+      <div class="form-section-body">
+        <div class="form-collection row pad-top">
+          <tamu-gisc-textbox formControlName="street_address" placeholder="Street Address" type="text" floatLabel="true"> </tamu-gisc-textbox>
+        </div>
 
-        <tamu-gisc-textbox formControlName="profile" placeholder="Profile URL" type="text" floatLabel="true"></tamu-gisc-textbox>
-      </div>
+        <div class="form-collection row">
+          <tamu-gisc-textbox formControlName="locality" placeholder="City" type="text" floatLabel="true"></tamu-gisc-textbox>
 
-      <div class="form-collection row">
-        <tamu-gisc-textbox formControlName="picture" placeholder="Picture" type="text" floatLabel="true"></tamu-gisc-textbox>
+          <tamu-gisc-textbox formControlName="region" placeholder="State" type="text" floatLabel="true"></tamu-gisc-textbox>
+        </div>
 
-        <tamu-gisc-textbox formControlName="website" placeholder="Website URL" type="text" floatLabel="true"></tamu-gisc-textbox>
-      </div>
+        <div class="form-collection row pad-top">
+          <tamu-gisc-textbox formControlName="postal_code" placeholder="Zip" type="text" floatLabel="true"></tamu-gisc-textbox>
 
-      <div class="form-collection row">
-        <tamu-gisc-textbox formControlName="gender" placeholder="Gender" type="text" floatLabel="true"></tamu-gisc-textbox>
-
-        <tamu-gisc-textbox formControlName="zoneinfo" placeholder="Zone Info" type="text" floatLabel="true"></tamu-gisc-textbox>
-      </div>
-
-      <div class="form-collection row">
-        <tamu-gisc-textbox formControlName="phone_number" placeholder="Phone Number" type="text" floatLabel="true"></tamu-gisc-textbox>
-
-        <tamu-gisc-textbox formControlName="phone_number_verified" placeholder="Phone Number Verified" type="text" floatLabel="true" disabled></tamu-gisc-textbox>
-      </div>
-
-      <div class="form-collection row">
-        <tamu-gisc-textbox formControlName="locale" placeholder="Locale" type="text" floatLabel="true"></tamu-gisc-textbox>
-      </div>
-      <div class="form-collection row">
-        <tamu-gisc-textbox formControlName="added" placeholder="Added" type="text" floatLabel="true" disabled></tamu-gisc-textbox>
-      </div>
-    </div>
-  </div>
-
-  <div class="form-section">
-    <div class="form-section-toolbar">
-      <div class="form-section-name">
-        <p>Address</p>
-      </div>
-    </div>
-
-    <div class="form-section-body">
-      <div class="form-collection row pad-top">
-        <tamu-gisc-textbox formControlName="street_address" placeholder="Street Address" type="text" floatLabel="true"> </tamu-gisc-textbox>
-      </div>
-
-      <div class="form-collection row">
-        <tamu-gisc-textbox formControlName="locality" placeholder="City" type="text" floatLabel="true"></tamu-gisc-textbox>
-
-        <tamu-gisc-textbox formControlName="region" placeholder="State" type="text" floatLabel="true"></tamu-gisc-textbox>
-      </div>
-
-      <div class="form-collection row pad-top">
-        <tamu-gisc-textbox formControlName="postal_code" placeholder="Zip" type="text" floatLabel="true"></tamu-gisc-textbox>
-
-        <tamu-gisc-textbox formControlName="country" placeholder="Country" type="text" floatLabel="true"></tamu-gisc-textbox>
+          <tamu-gisc-textbox formControlName="country" placeholder="Country" type="text" floatLabel="true"></tamu-gisc-textbox>
+        </div>
       </div>
     </div>
   </div>
