--- a/libs/oidc/admin/src/lib/modules/users/edit-users/detail-user/detail-user.component.html
+++ b/libs/oidc/admin/src/lib/modules/users/edit-users/detail-user/detail-user.component.html
@@ -7,32 +7,32 @@
     </div>
     <div class="form-section-body">
       <div class="form-collection row pad-top">
-        <tamu-gisc-textbox formControlName="guid" placeholder="Guid" type="text" floatLabel="true" disabled> </tamu-gisc-textbox>
+        <tamu-gisc-textbox formControlName="guid" placeholder="Guid" type="text" floatLabel="true"> </tamu-gisc-textbox>
       </div>
 
       <div class="form-collection row">
         <tamu-gisc-textbox formControlName="email" placeholder="Email" type="text" floatLabel="true"></tamu-gisc-textbox>
 
-        <tamu-gisc-textbox formControlName="email_verified" placeholder="Email Verified" type="text" floatLabel="true" disabled></tamu-gisc-textbox>
+        <tamu-gisc-textbox formControlName="email_verified" placeholder="Email Verified" type="text" floatLabel="true"></tamu-gisc-textbox>
       </div>
 
       <div class="form-collection row">
-        <tamu-gisc-textbox formControlName="enabled2fa" placeholder="Enabled 2FA" type="text" floatLabel="true" disabled></tamu-gisc-textbox>
+        <tamu-gisc-textbox formControlName="enabled2fa" placeholder="Enabled 2FA" type="text" floatLabel="true"></tamu-gisc-textbox>
       </div>
       <div class="form-collection row">
         <tamu-gisc-textbox formControlName="recovery_email" placeholder="Recovery Email" type="text" floatLabel="true"></tamu-gisc-textbox>
 
-        <tamu-gisc-textbox formControlName="recovery_email_verified" placeholder="Recovery Email Verified" type="text" floatLabel="true" disabled></tamu-gisc-textbox>
+        <tamu-gisc-textbox formControlName="recovery_email_verified" placeholder="Recovery Email Verified" type="text" floatLabel="true"></tamu-gisc-textbox>
       </div>
       <div class="form-collection row">
-        <tamu-gisc-textbox formControlName="added" placeholder="Added" type="text" floatLabel="true" disabled></tamu-gisc-textbox>
+        <tamu-gisc-textbox formControlName="added" placeholder="Added" type="text" floatLabel="true"></tamu-gisc-textbox>
 
-        <tamu-gisc-textbox formControlName="updatedAt" placeholder="Updated At" type="text" floatLabel="true" disabled></tamu-gisc-textbox>
+        <tamu-gisc-textbox formControlName="updatedAt" placeholder="Updated At" type="text" floatLabel="true"></tamu-gisc-textbox>
       </div>
       <div class="form-collection row">
-        <tamu-gisc-textbox formControlName="signup_ip_address" placeholder="Signup IP" type="text" floatLabel="true" disabled></tamu-gisc-textbox>
+        <tamu-gisc-textbox formControlName="signup_ip_address" placeholder="Signup IP" type="text" floatLabel="true"></tamu-gisc-textbox>
 
-        <tamu-gisc-textbox formControlName="last_used_ip_address" placeholder="Last Used IP" type="text" floatLabel="true" disabled></tamu-gisc-textbox>
+        <tamu-gisc-textbox formControlName="last_used_ip_address" placeholder="Last Used IP" type="text" floatLabel="true"></tamu-gisc-textbox>
       </div>
     </div>
   </div>
@@ -73,14 +73,14 @@
         <div class="form-collection row">
           <tamu-gisc-textbox formControlName="phone_number" placeholder="Phone Number" type="text" floatLabel="true"></tamu-gisc-textbox>
 
-          <tamu-gisc-textbox formControlName="phone_number_verified" placeholder="Phone Number Verified" type="text" floatLabel="true" disabled></tamu-gisc-textbox>
+          <tamu-gisc-textbox formControlName="phone_number_verified" placeholder="Phone Number Verified" type="text" floatLabel="true"></tamu-gisc-textbox>
         </div>
 
         <div class="form-collection row">
           <tamu-gisc-textbox formControlName="locale" placeholder="Locale" type="text" floatLabel="true"></tamu-gisc-textbox>
         </div>
         <div class="form-collection row">
-          <tamu-gisc-textbox formControlName="added" placeholder="Added" type="text" floatLabel="true" disabled></tamu-gisc-textbox>
+          <tamu-gisc-textbox formControlName="added" placeholder="Added" type="text" floatLabel="true"></tamu-gisc-textbox>
         </div>
       </div>
     </div>
