Updated user role component front end

--- a/libs/oidc/admin/src/lib/modules/users/edit-users/detail-user/detail-user.component.html
+++ b/libs/oidc/admin/src/lib/modules/users/edit-users/detail-user/detail-user.component.html
@@ -113,7 +113,7 @@
   </div>
 </form>
 
-<form [formGroup]="roleForm">
+<form [formGroup]="roleForm" *ngIf="roleForm">
   <div class="form-section">
     <div class="form-section-toolbar">
       <div class="form-section-name">
