Works close enough for now

--- a/libs/oidc/admin/src/lib/modules/users/edit-users/detail-user/detail-user.component.html
+++ b/libs/oidc/admin/src/lib/modules/users/edit-users/detail-user/detail-user.component.html
@@ -123,8 +123,8 @@
 
     <table>
       <tr *ngFor="let control of roleForm.controls | keyvalue">
-        <td>{{control.key}}</td>
-        <td>
+        <td *ngIf="control.key !== 'userGuid'">{{control.key}}</td>
+        <td *ngIf="control.key !== 'userGuid'">
           <tamu-gisc-select [formControlName]="control.key" [data]="($roles | async)" placeholder="No role" displayTemplate="name" valueTemplate="guid"></tamu-gisc-select>
         </td>
       </tr>
