--- a/apps/oidc-admin-angular/src/app/app.component.html
+++ b/apps/oidc-admin-angular/src/app/app.component.html
@@ -38,7 +38,7 @@
 
       <div class="menu-item">
         <span class="material-icons">login</span>
-        <p>Login</p>
+        <a href="http://localhost:3000/oidc/login">Login</a>
       </div>
     </div>
   </div>
