Removed separate all.entity

--- a/apps/oidc-admin-angular/src/app/app.component.html
+++ b/apps/oidc-admin-angular/src/app/app.component.html
@@ -26,6 +26,11 @@
         <p>Token Auth Methods</p>
       </div>
 
+      <div class="menu-item" [routerLink]="['access']" routerLinkActive="active">
+        <span class="material-icons">face</span>
+        <p>Access</p>
+      </div>
+
       <div class="menu-item" [routerLink]="['users']" routerLinkActive="active">
         <span class="material-icons">people</span>
         <p>Users</p>
