Can view current access tokens

--- a/libs/oidc/admin/src/lib/modules/access-token/view-access-token/view-access-token.component.html
+++ b/libs/oidc/admin/src/lib/modules/access-token/view-access-token/view-access-token.component.html
@@ -1,1 +1,10 @@
-<p>view-access-token works!</p>
+<table>
+  <tr>
+    <th>Client Id</th>
+    <th>Account Guid</th>
+  </tr>
+  <tr *ngFor="let accessToken of ($accessTokens | async)">
+    <td>{{accessToken.clientId}}</td>
+    <td>{{accessToken.accountGuid}}</td>
+  </tr>
+</table>
