Revoking of access tokens now works

--- a/libs/oidc/admin/src/lib/modules/access-token/edit-access-token/edit-access-token.component.html
+++ b/libs/oidc/admin/src/lib/modules/access-token/edit-access-token/edit-access-token.component.html
@@ -1,1 +1,14 @@
-<p>edit-access-token works!</p>
+<table>
+  <tr>
+    <th>Client Id</th>
+    <th>Grant Id</th>
+    <th>Account Guid</th>
+    <th class="action-row">Actions</th>
+  </tr>
+  <tr *ngFor="let accessToken of ($accessTokens | async)">
+    <td>{{accessToken.clientId}}</td>
+    <td>{{accessToken.grantId}}</td>
+    <td>{{accessToken.accountGuid}}</td>
+    <td><span (click)="revokeAccessToken(accessToken)" class="material-icons action alt" title="Revoke access token">delete</span></td>
+  </tr>
+</table>
