Fixed particpant scanning
- Clicking "next" on the first participant, when there were more than 1 participant entries caused the workspace to reset.
- Fixed some form CSS styles, particularly with form sections, titles, and form labels from their sibling input controls in the non-empty state.

--- a/libs/cpa/common/ngx/src/lib/modules/forms/components/participant/participant.component.html
+++ b/libs/cpa/common/ngx/src/lib/modules/forms/components/participant/participant.component.html
@@ -48,7 +48,7 @@
         </div>
         <tamu-gisc-map-draw [reference]="'drawing-layer'" [collapseGraphics]="true" (export)="handleDrawSelection($event)"></tamu-gisc-map-draw>
       </div>
-
+<!-- 
       <div class="sidebar-component-content-container">
         <div class="sidebar-component-name">
           <p>Summary & Charts</p>
@@ -59,7 +59,7 @@
             <tamu-gisc-bar-chart [paths]="[['attributes.Qualifier', 'identity']]" [transformations]="[['categorize', 'count']]" [labels]="['Type']" [options]="chartOptions"></tamu-gisc-bar-chart>
           </div>
         </tamu-gisc-selection-summary>
-      </div>
+      </div> -->
     </div>
   </div>
 </form>
