--- a/libs/cpa/common/ngx/src/lib/modules/forms/components/workshop-builder/workshop-builder.component.html
+++ b/libs/cpa/common/ngx/src/lib/modules/forms/components/workshop-builder/workshop-builder.component.html
@@ -24,7 +24,7 @@
 
   <div class="form-section" *ngIf="isExisting | async">
     <div class="form-section-toolbar">
-      <div class="form-section-title">
+      <div class="form-section-name">
         <p>Snapshots</p>
       </div>
     </div>
