--- a/libs/cpa/common/ngx/src/lib/modules/viewer/viewer.component.html
+++ b/libs/cpa/common/ngx/src/lib/modules/viewer/viewer.component.html
@@ -3,3 +3,6 @@
     <router-outlet></router-outlet>
   </div>
 </tamu-gisc-drawer>
+
+
+<tamu-gisc-snapshot-navigator></tamu-gisc-snapshot-navigator>
