Added layer linking to layer configuraton component
Linking loads/unloads layers on demand to visuzalize map layer changes before committing to them.

--- a/libs/cpa/common/ngx/src/lib/modules/forms/components/scenario-builder/scenario-builder.component.html
+++ b/libs/cpa/common/ngx/src/lib/modules/forms/components/scenario-builder/scenario-builder.component.html
@@ -69,7 +69,7 @@
               Edit Layer Details
             </tamu-gisc-accordion-header>
             <tamu-gisc-accordion-content>
-              <tamu-gisc-layer-configuration [url]="controlGroup.controls.url.value" [configOptions]="controlGroup"></tamu-gisc-layer-configuration>
+              <tamu-gisc-layer-configuration [url]="controlGroup.controls.url.value" [configOptions]="controlGroup" [link]="true"></tamu-gisc-layer-configuration>
             </tamu-gisc-accordion-content>
           </tamu-gisc-accordion>
         </div>
