Updated sidebars and sidebar tab/containers
- Updated the visibility logic for a sidebar that was causing view route changes whenever a tab route was an empty string and the active route was a parameterized route.

This change stemmed from having to render two different sidebars for "create" and "viewer" components, where the viwer component will also render the "Live layers".

--- a/libs/cpa/common/ngx/src/lib/modules/viewer/viewer.component.html
+++ b/libs/cpa/common/ngx/src/lib/modules/viewer/viewer.component.html
@@ -5,3 +5,13 @@
 </tamu-gisc-drawer>
 
 <tamu-gisc-snapshot-navigator></tamu-gisc-snapshot-navigator>
+
+<tamu-gisc-sidebar width="22.5rem" position="right" visible="false">
+  <div class="tabs left">
+    <tamu-gisc-sidebar-tab [title]="'Features'" [description]="'Toggle Features (Search, Layers, Legend)'" [material_icon]="'menu'"></tamu-gisc-sidebar-tab>
+  </div>
+
+  <div class="content">
+    <tamu-gisc-layer-list></tamu-gisc-layer-list>
+  </div>
+</tamu-gisc-sidebar>
