Added basic live layers functionality

--- a/libs/cpa/common/ngx/src/lib/modules/viewer/viewer.component.html
+++ b/libs/cpa/common/ngx/src/lib/modules/viewer/viewer.component.html
@@ -13,5 +13,7 @@
 
   <div class="content">
     <tamu-gisc-layer-list></tamu-gisc-layer-list>
+
+    <tamu-gisc-live-layers-control></tamu-gisc-live-layers-control>
   </div>
 </tamu-gisc-sidebar>
