--- a/libs/cpa/admin/src/lib/cpa-admin.component.html
+++ b/libs/cpa/admin/src/lib/cpa-admin.component.html
@@ -1,24 +1,24 @@
 <tamu-gisc-drawer layout="relative" width="20rem">
   <div class="content">
     <div class="sidebar-menu">
-      <div class="menu-item" [routerLink]="['account']" routerLinkActive="active">
-        <span class="material-icons">person</span>
+      <div class="menu-item" [routerLink]="['workshops']" routerLinkActive="active">
+        <span class="material-icons">handyman</span>
         <p>Workshops</p>
       </div>
 
-      <div class="menu-item" [routerLink]="['credits']" routerLinkActive="active">
-        <span class="material-icons">card_membership</span>
+      <div class="menu-item" [routerLink]="['snapshots']" routerLinkActive="active">
+        <span class="material-icons">picture_in_picture</span>
         <p>Snapshots</p>
       </div>
 
-      <div class="menu-item">
-        <span class="material-icons">credit_card</span>
+      <div class="menu-item" [routerLink]="['scenarios']" routerLinkActive="active">
+        <span class="material-icons">track_changes</span>
         <p>Scenarios</p>
       </div>
 
-      <div class="menu-item">
-        <span class="material-icons">memory</span>
-        <p>Participants</p>
+      <div class="menu-item" [routerLink]="['users']" routerLinkActive="active">
+        <span class="material-icons">people</span>
+        <p>Users</p>
       </div>
     </div>
   </div>
