--- a/libs/cpa/admin/src/lib/pages/snapshots/snapshots.component.html
+++ b/libs/cpa/admin/src/lib/pages/snapshots/snapshots.component.html
@@ -5,12 +5,11 @@
     <div class="tab-container row">
       <div class="tabs">
         <div class="tab" [routerLink]="['./']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">All Snapshots</div>
-        <div class="tab" [routerLink]="['security']" routerLinkActive="active">New Snapshots</div>
+        <div class="tab" [routerLink]="['security']" routerLinkActive="active">New Snapshot</div>
       </div>
 
       <div class="tab-content">
-        <!-- <router-outlet></router-outlet> -->
-        <p>Some other content goes here</p>
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
