--- a/libs/cpa/admin/src/lib/pages/workshops/workshops.component.html
+++ b/libs/cpa/admin/src/lib/pages/workshops/workshops.component.html
@@ -9,8 +9,7 @@
       </div>
 
       <div class="tab-content">
-        <!-- <router-outlet></router-outlet> -->
-        <p>Some other content goes here</p>
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
