View/edit snapshot/workshop views transferred
- Removed old sidebar create  module/components. All workshop and snapshot entity creation is done in the admin management section.
- Still need to implement creating a new entity for both snapshots and workshops

--- a/apps/cpa-angular/src/styles.scss
+++ b/apps/cpa-angular/src/styles.scss
@@ -123,3 +123,9 @@ section {
   @include justify-content(space-between);
   @include align-items(center);
 }
+
+.table-actions {
+  a {
+    margin: 0 0.5rem;
+  }
+}
