--- a/libs/cpa/admin/src/lib/pages/snapshots/pages/snapshots-list/snapshots-list.component.html
+++ b/libs/cpa/admin/src/lib/pages/snapshots/pages/snapshots-list/snapshots-list.component.html
@@ -14,7 +14,7 @@
         <div class="floating-row" *ngFor="let snapshot of snapshots | async">
           <div class="column">{{snapshot.title}}</div>
           <div class="column table-actions">
-            <a routerLink="../edit" [queryParams]="{guid: snapshot.guid}">Edit</a>
+            <a [routerLink]="['../edit', snapshot.guid]">Edit</a>
           </div>
         </div>
       </div>
